feat: Fetch module data from other devices with Query Parameters (#20)
* add device id query

* chore: fix line endings

* feat: get module data from other devices

* chore: line endings

* setup error conditions

* chore: fix lint
